fixed logo visibility

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -160,9 +160,3 @@ html[data-theme='dark'] .footer__link-item:hover {
     display: none !important;
   }
 } 
-
-@media only screen and (min-width: 1280px){
-  .navbar__brand{
-    display: none;
-  }
-}
